1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.
	Swarm 1.3.1 released.

	* space.h (_Discrete2d): Make x and y arguments to setSizeX:Y:,
	getObjectAtX:Y: getValueAtX:Y:, putObject:atX:Y:, putValue:atX:Y:
	unsigned.  Make return values of getSize{X,Y} unsigned.
	(DblBuffer2d): Make x and y arguments to putObject:atX:Y: and
	putValue:atX:Y: unsigned.
	(Grid2d): Likewise.
	(Ca2d): Make argument to setNumStates: unsigned.
	
	* Object2dDisplay.[hm] ([Object -makeProbeAtX:Y:]): Make x and
	y unsigned.

	* Grid2d.m ([Grid -putObject:atX:Y:]): Make x and y unsigned.

	* Discrete2d.m ([Discrete2d -makeOffsets]): Make i unsigned.
	([Discrete2d -setDiscrete2d:toFile]): Make x, y, fileXSize, and
	fileYSize unsigned.
	([Discrete2d -copyDiscrete2d:toDiscrete2d:]): Make x and y
	unsigned.

	* Discrete2d.[hm] ([Discrete2d -setSizeX:Y:], [Discrete2d
	-getSizeX],
	[Discrete2d -getSizeY], [Discrete2d -getObjectAtX:Y:], [Discrete2d
	-getValueAtX:Y:], [Discrete2d -putObject:atX:Y:], [Discrete2d
	-putValue:atX:Y:], [Discrete2d -makeOffsets]): Make x and y
	unsigned.

	* DblBuffer2d.m ([DblBuffer -putObject:atX:Y:], 
	[DblBuffer -putValue:atX:Y:]): Make x and y arguments unsigned.

	* Ca2d.[hm]: Make numStates and setter unsigned.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (AGE, CURRENT): Increment.  Swarm 1.3 released.

1998-07-24  Alex Lancaster  <alex@santafe.edu>

	* DblBuffer2d.m ([DblBuffer -updateLattice]): Fixed WarningMessage
	to report error to DblBuffer2d rather than Ca2d.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Int2dFiler.m ([Int -fileTo:]): Remove warning on nil outFile --
	a warning will be issued by OutFile, anyway.  Return nil in this
	case.

	* Discrete2d.m ([Discrete2d -setDiscrete2d:toFile:]): Add protocol
	name to error message.
	