@@ -1,3 +1,7 @@
+1999-02-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* Discrete2d.[hm], space.h ([Discrete -setLattice:]): New method.
+
 1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.
